# WChSandBox

./: .gitignore  CMakeLists.txt  GNUmakefile  GNUmakefile_root  MainRun.mac  MainRunHK.mac  Makefile  Muons.mac  PhysicsListNotes  README  README.md  Source_At_Start_T2HK.sh  WChSandBox.cc  annie_v01.gdml  binmake.gmk  cmake build procedure  hits  how to  build WChSandBox  how to build WChSandBox  libname.map  primarygeneratoraction  setupLite.sh  setupWChSandBox.sh  unaccountedparticlesandprocesses.txt  vis.mac
ROOT_work/: MRDStrikeClass.hh  MRDTrackClass.hh  MRDspecs.hh  addmrdplots.cxx  addmrdplots_bkup1.cxx  addmrdplots_cxx.d  callcode.cxx  check_photon_end_pos.cxx  coincidence_search.cc  coincidence_search_cc_ACLiC_dict_rdict.pcm  mrdanalysis  reference code  rooterror.out  vetoanalysis
ROOT_work/tests/: testclasstree.cxx  testclasstree2.cxx
ROOT_work/trash/: addmrdplots_cxx.d  check_photon_end_pos_cxx.d  logfile.out  logfile2.out  lost geometry  strippedcode_cxx.d  testclasstree2_cxx.d  testclasstree_cxx.d
analysis/: Makefile
analysis/advanced_scripts/: Draw2DEvtDisp.C  README.txt  StudyCoveragesANNIE.C  StudyCoveragesMRD.C  StudyCoveragesMRD2.C  StudyCoveragesTim.C  StudyCoverages_ncaptAntinu.C  StudyCoverages_ncaptAntinu_eachConfigANNIE.C  StudyCoverages_ncaptAntinu_eachConfigTITUS.C  StudyCoverages_ncaptNu.C  StudyCoverages_ncaptNu_C.d  StudyCoverages_ncaptPMT_eachConfigTITUS.C
analysis/example_scripts/: AddYourOwnPhotons.C  BasicTITUSAnalysis.C  DrawEventDisplay.C  LAPPD_Pileup.C  MRDandKinematics.C  MakeEplots.C  MattWAnalysis.C  NeutronCountCheck.C  README  RecoLite.C  SimpleAnalysis.C  SimpleRead.C  SimpleReadWrite.C  StudyCoverages.C  TestEventDisplay2D.C  TestEventDisplay3D.C
analysis/include/: EventDisplay.hh  EventDisplay2D.hh  EventDisplay3D.hh  RasterizeCircle.hh  SandBoxPMTcoverage.hh  SandBoxPMTcoverageBox.hh  WCLRootLinkDef.hh  WCLTreeReader.hh  WCLTreeWriter.hh  WCSimIsoChronTransform.hh  WCSimIsochron.hh  WCSimParameters.hh  WCSimRecoCluster.hh  WCSimRecoDigit.hh  WCSimRecoObjectTable.hh  WCSimRecoVertex.hh  WCSimTrueCapture.hh  WCSimTrueLight.hh  WCSimTrueLightCluster.hh  WCSimTruePart.hh  WCSimVertexGeometry.hh  WCSimWaterModel.hh  WChRecoLite.hh  help_func.C
analysis/src/: EventDisplay.cc  EventDisplay2D.cc  EventDisplay3D.cc  RasterizeCircle.cc  SandBoxPMTcoverage.cc  SandBoxPMTcoverageBox.cc  WCLRootDict.cc  WCLRootDict.h  WCLTreeReader.cc  WCLTreeWriter.cc  WCSimIsoChronTransform.cc  WCSimIsochron.cc  WCSimParameters.cc  WCSimRecoCluster.cc  WCSimRecoDigit.cc  WCSimRecoObjectTable.cc  WCSimRecoVertex.cc  WCSimTrueCapture.cc  WCSimTrueLight.cc  WCSimTrueLightCluster.cc  WCSimTruePart.cc  WCSimVertexGeometry.cc  WCSimWaterModel.cc  WChRecoLite.cc
fluxesandtables/: electrons_20MeV.txt  genev_to_nuance.py  muons_400MeV.txt  scin_geo.txt
include/: FACCHit.hh  FACCSD.hh  MRDDetectorConstruction.hh  MRDHit.hh  MRDSD.hh  NCVHit.hh  NCVSD.hh  SBsimMRDDB.hh  SBsimMRDHit.hh  SBsimMRDResponse.hh  SBsimMRDSD.hh  WCLiteDetectorConstruction.hh  WCLiteEventAction.bkp  WCLiteEventAction.hh  WCLitePhysicsList.hh  WCLitePhysicsList.hh.g94  WCLitePhysicsMessenger.hh  WCLitePrimaryGeneratorAction.hh  WCLitePrimaryGeneratorMessenger.hh  WCLiteRunAction.hh  WCLiteStackingAction.hh  WCLiteSteppingAction.hh  WCLiteSteppingVerbose.hh  WCLiteTrackInformation.hh  WCLiteTrackingAction.hh  WCLiteTrajectory.hh  WCLiteTrajectoryPoint.hh  WCLiteTrakectory.hh  WCSimPMTObject.hh  WCSimWCAddDarkNoise.hh  WCSimWCDAQMessenger.hh  WCSimWCDigitizer.hh  WCSimWCDigitizerNew.hh  WCSimWCPMT.hh  WCSimWCSD.hh  WCSimWCTrigger.hh  faccPMTSD.hh  faccPMThit.hh  mrdPMTSD.hh  mrdPMThit.hh
mac/: MainRun.mac  gamma.mac  vis.mac
src/: DefineMRD.icc  FACCHit.cc  FACCSD.cc  MRDDetectorConstruction.cc  MRDHit.cc  MRDSD.cc  MRDstatsfromfile.cc.template  NCVHit.cc  NCVSD.cc  SBsimMRDDB.cc  SBsimMRDHit.cc  SBsimMRDResponse.cc  WCLiteConstructMaterials.cc  WCLiteDetectorConstruction.cc  WCLiteEventAction.cc  WCLiteEventAction.cc.original  WCLiteEventAction.cc~  WCLitePhysicsList.cc  WCLitePhysicsList.cc.g410  WCLitePhysicsMessenger.cc  WCLitePrimaryGeneratorAction.bkp  WCLitePrimaryGeneratorAction.bkp_2  WCLitePrimaryGeneratorAction.cc  WCLitePrimaryGeneratorAction.new  WCLitePrimaryGeneratorMessenger.cc  WCLiteRunAction.cc  WCLiteStackingAction.cc  WCLiteSteppingAction.cc  WCLiteSteppingVerbose.cc  WCLiteTrackInformation.cc  WCLiteTrackingAction.cc  WCLiteTrajectory.cc  WCLiteTrajectoryPoint.cc  WCSimConstructGeometryTables.cc  WCSimConstructPMT.cc  WCSimPMTObject.cc  WCSimPMTQE.cc  WCSimRootDict.cc  WCSimRootDict_rdict.pcm  WCSimWCAddDarkNoise.cc  (+17 more)
tests/: strikeclasstest.hh  strippedcode.cxx  testclasstree3.cxx
tmp/Linux-g++/WChSandBox/: MRDDetectorConstruction.d  MRDHit.d  MRDSD.d  SBsimMRDDB.d  SBsimMRDHit.d  SBsimMRDResponse.d  WCLiteConstructMaterials.d  WCLiteDetectorConstruction.d  WCLiteEventAction.d  WCLitePhysicsList.d  WCLitePhysicsMessenger.d  WCLitePrimaryGeneratorAction.d  WCLitePrimaryGeneratorMessenger.d  WCLiteRunAction.d  WCLiteStackingAction.d  WCLiteSteppingAction.d  WCLiteSteppingVerbose.d  WCLiteTrackInformation.d  WCLiteTrackingAction.d  WCLiteTrajectory.d  WCLiteTrajectoryPoint.d  mrdPMTSD.d  mrdPMThit.d
tmp/Linux-g++/WChSandBox/exe/: WChSandBox.d
tmp/WChSandBox/: MRDDetectorConstruction.d  MRDHit.d  MRDSD.d  SBsimMRDDB.d  SBsimMRDHit.d  SBsimMRDResponse.d  WCLiteConstructMaterials.d  WCLiteDetectorConstruction.d  WCLitePhysicsList.d  WCLitePhysicsMessenger.d  WCLiteRunAction.d  WCLiteStackingAction.d  WCLiteSteppingVerbose.d  WCLiteTrackInformation.d  WCLiteTrajectory.d  WCLiteTrajectoryPoint.d  mrdPMTSD.d  mrdPMThit.d
tmp/WChSandBox/exe/: WChSandBox.d
unused/: MRDDetectorConstruction.cc.marcus  MRDDetectorConstruction.hh.marcus  WCLiteDetectorConstruction.cc.marcus  WCLiteEventAction.cc.bkp  WCLitePhysicsList.hh.bkp
